--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 	</head>
 	<body>
         <header>
-            <div class="logo">
-                <img src="img/rio.jpeg" alt="">
-            </div>
-            <button class="nav-toggle" aria-label="toggle navigation">
+            	<div class="logo">
+                	<img src="img/rio.jpeg" alt="">
+            	</div>
+            	<button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
-            </button>
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#aboutme" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">Favourite</a></li>
-                    <li class="nav__item"><a href="#projects" class="nav__link">My picture</a></li>
-                </ul>
-            </nav>
+            	</button>
+            	<nav class="nav">
+               			 <ul class="nav__list">
+                 			   <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+               			  	   <li class="nav__item"><a href="#aboutme" class="nav__link">About me</a></li>
+                 			   <li class="nav__item"><a href="#services" class="nav__link">Favourite</a></li>
+                  			   <li class="nav__item"><a href="#projects" class="nav__link">My picture</a></li>
+               			 </ul>
+       	   		 </nav>
         </header>
 	
     <!-- home -->
@@ -45,8 +45,8 @@
         <!-- About me -->
 <div class="section-bg">
     <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Brief description</h2>
-        <p class="section__subtitle section__subtitle--about">About Me:</p>
+        <h2 class="section__title section__title--about">ABOUT ME</h2>
+        <p class="section__subtitle section__subtitle--about">A Purr-fect Introduction</p>
        
 		<div class="about-me__body">
             <p>
@@ -181,6 +181,7 @@
             </ul>
         </footer>
 
-		
+	<script src="js/index.js"></script>
+
 	</body>
 </html>
