--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<body>
         <header>
             	<div class="logo">
+					<img src="img/kat-low-resolution-logo-color-on-transparent-background-2.png" alt="">
             	</div>
             	<button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
@@ -24,8 +25,8 @@
             	<nav class="nav">
                			 <ul class="nav__list">
                  			   <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-               			  	   <li class="nav__item"><a href="#aboutme" class="nav__link">About me</a></li>
-                 			   <li class="nav__item"><a href="#services" class="nav__link">Favourite</a></li>
+               			  	   <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                 			   <li class="nav__item"><a href="#services" class="nav__link"> My Favourite</a></li>
                   			   <li class="nav__item"><a href="#projects" class="nav__link">My picture</a></li>
                			 </ul>
        	   		 </nav>
