--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
        
 		<div class="about-me__body">
             <p>
-                I was born in June 10, 2022. I'm a full breed maine coon and have a colour of black and white fur. My favourite HOOMAN is Katrina and Glydel.)
+                I was born in June 10, 2022. I'm a full breed maine coon and have a colour of black and white fur. My favourite HOOMAN is Katrina and Glydel.
                 I have a brother name "Scout" whom i both adore and hate at the same time. 
             </p>
             <p>
