--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
        
 		<div class="about-me__body">
             <p>
-                I was born in June 10, 2022. I'm a full breed maine coon and have a colour of black and white fur. My favourite HOOMAN is Katrina and Glydel.
-                I have a brother name "Scout" whom i both adore and hate at the same time. 
+                "I was born on June 10, 2022. I'm a purebred Maine Coon with black and white fur. My favorite HOOMAN are Katrina and Glydel. I have a brother named 'Scout' whom I both adore and sometimes have conflicts with."
+
+
             </p>
             <p>
                 I hate meeting new people and would hide every time I see them going near me, but don't worry I'm very nice...once I feel comfortable around a person I would let them pet me(not my belly tho).
